# PortfolioOpt

./: .dockerignore  Dockerfile  README.md  app.py  compose.yaml  docker-compose.yml  finance_bro.ipynb  portfolio_service.py  pyproject.toml  tickers.py
.github/: copilot-instructions.md
portfolio_dash/: __init__.py  __main__.py  app.py  data_download.py  models.py  optimization.py  optimizer_core.py  plots.py  portfolio_service.py  theme.py
portfolio_dash/assets/: dashboard.css
