[tool.poetry]
name = "portfolio-dash"
version = "0.1.0"
description = "Dash web app for portfolio optimization charts"
authors = ["ZDave david@zoller.dev"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
dash = "^2.18.2"
plotly = "^6.0.1"
pandas = "^2.2.3"
numpy = "^2.2.4"
yfinance = "^0.2.54"
PyPortfolioOpt = "^1.5.6"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
